# vala

./: gtk-hello.vala  helloworld.vala
gtk-testing/: CMakeLists.txt
gtk-testing/data/: gtk-testing.desktop
gtk-testing/debian/: changelog  control  copyright
gtk-testing/src/: gtk-testing.vala
hello/: COPYING  hello-again.vala
hello-again/: AUTHORS  CMakeLists.txt
hello-again/.bzr/branch/: branch.conf
hello-again/.bzr/repository/: pack-names
hello-packaging/: CMakeLists.txt
hello-packaging/data/: hello-packaging.desktop
hello-packaging/debian/: changelog  control  copyright
hello-packaging/src/: hello-packaging.vala
